<resources>
    <string name="app_name">Tamagochy</string>
    <string name="tamagochy">TAMAGOCHY</string>
    <string name="login">login</string>
    <string name="entrar">Entrar</string>
    <string name="default_web_client_id">822084388765-cnvo2cbaa4p4esiktet4r5g914b64c0p.apps.googleusercontent.com</string>
    <string name="default_web_client_storage_url">gs://tamagochi-4469f.appspot.com</string>
    <string name="upload_image">Carregar Imagem</string>
    <string name="fragmentHome">Meus Pets</string>
    <string name="pet_name_hint">Nome</string>
    <string name="save_pet">Salvar</string>
    <string name="alimentar">Alimentar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_code">Pet Code</string>
    <string name="log_out">Log Out</string>
    <string name="adicionar_pet">Adicionar Pet</string>
    <string name="meus_pets">Meus Pets</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sobre">Sobre</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="conta">Conta</string>


</resources>