<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
<<<<<<< HEAD
    tools:context=".fragments.AddPetFragment">
=======
    tools:context=".AddPetFragment">
>>>>>>> 375c225ae1760634ed51b8d9fb565156dc856d00

    <ImageView
        android:id="@+id/imageViewPet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pet_placeholder"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextPetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pet_name_hint"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <!-- Novo EditText para código alfanumérico -->
    <EditText
        android:id="@+id/editTextPetCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite o código do pet (8 dígitos)"
        android:inputType="text"
        android:layout_marginBottom="16dp" />

    <!-- Botão para buscar pet com o código -->
    <Button
        android:id="@+id/buttonAddPetByCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar Pet pelo Código"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonSavePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_pet" />

</LinearLayout>
