<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@color/cardview_dark_background"
        android:src="@drawable/logo_png_removebg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tamagochy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintVertical_bias="0.218">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="312dp"
        android:layout_height="200dp"
        app:layout_constraintBaseline_toBottomOf="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="32dp"
            android:hint="@string/login"
            android:text="@string/login"
            android:textAlignment="center">

        </androidx.appcompat.widget.AppCompatEditText>


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="96dp"
            android:inputType="textPassword"
            android:text="@string/app_name"
            android:textAlignment="center">

        </androidx.appcompat.widget.AppCompatEditText>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.115">

    </androidx.appcompat.widget.AppCompatButton>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatButton"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Criar uma Conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
        app:layout_constraintVertical_bias="0.285"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/material_dynamic_secondary0"

        />

</androidx.constraintlayout.widget.ConstraintLayout>